--- a/Computer Networks/Ex03/assets/500.html
+++ b/Computer Networks/Ex03/assets/500.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Woops!</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-	<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.teal-red.min.css">
+	<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.red-purple.min.css">
 	<script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -12,7 +12,7 @@
 		.demo-ribbon {
 			width: 100%;
 			height: 40vh;
-			background-color: #3F51B5;
+			background-color: #F44336;
 			flex-shrink: 0;
 		}
 
@@ -65,7 +65,7 @@
 				<div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
 				<div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
 					<div class="demo-crumbs mdl-color-text--grey-500">
-						Computer Networks' server &gt; 500 Error
+						Computer Networks' server &gt; 500 (Server Error)
 					</div>
 					<h3><i>Oops! somethings went terribly wrong</i></h3>
 					<p>
