--- a/Computer Networks/Ex03/assets/404.html
+++ b/Computer Networks/Ex03/assets/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Woops!</title>
+    <title>Page not found</title>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <style>
@@ -55,6 +55,7 @@
             font-family: "Roboto", "Times New Roman";
             font-weight: 300;
             text-align: center;
+            font-size: 1.3em;
         }
 
         .frame-content p {
@@ -75,7 +76,6 @@
                     find it
                 </p>
             </div>
-
         </div>
     </div>
 </div>
