--- a/Computer Networks/Ex03/assets/403.html
+++ b/Computer Networks/Ex03/assets/403.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Woops!</title>
+    <title>Forbidden!</title>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <style>
@@ -16,7 +16,7 @@
             position: fixed;
             width: 100%;
             height: 100%;
-            background-color: #EF6C00;
+            background-color: #757575;
         }
 
         .content {
@@ -68,13 +68,11 @@
     <div class="content">
         <div class="frame">
             <div class="frame-header">
-                <h1 class="header-text"> 5 0 0 </h1>
+                <h1 class="header-text"> 4 0 3 </h1>
             </div>
             <div class="frame-content">
                 <p class="frame-content-text">
-                    It's either we fucked up something, or you fucked up something.
-                    <br>
-                    It's probably us.
+                    Na na na na, na na, na na, you can't touch this
                 </p>
             </div>
 
