--- a/Computer Networks/Ex03/assets/404.html
+++ b/Computer Networks/Ex03/assets/404.html
@@ -72,8 +72,7 @@
             </div>
             <div class="frame-content">
                 <p class="frame-content-text">
-                    We couldn't find the page you've asked for, but we dispatched a group of useless students to try and
-                    find it
+                    It's 3:30 AM and I'm trying to make up clever 404 jokes. Life not found
                 </p>
             </div>
         </div>
