--- a/Computer Networks/Ex03/assets/403.html
+++ b/Computer Networks/Ex03/assets/403.html
@@ -16,7 +16,7 @@
             position: fixed;
             width: 100%;
             height: 100%;
-            background-color: #757575;
+            background-color: #D84315;
         }
 
         .content {
