Working on proper response flow

--- a/Computer Networks/Ex03/assets/index.html
+++ b/Computer Networks/Ex03/assets/index.html
@@ -4,7 +4,8 @@
     <title>Welcome!</title>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>  <style>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <style>
         body {
             padding: 0;
             margin: 0;
@@ -43,7 +44,8 @@
             font-size: 10em;
             padding: 0;
             margin: 0;
-            text-align: center;
+            text-align-last: center;
+
         }
 
         .frame-content {
@@ -54,8 +56,8 @@
             color: white;
             font-family: "Roboto", "Times New Roman";
             font-weight: 300;
-            text-align: center;
             font-size: 1.3em;
+            text-align-last: center;
         }
 
         .frame-content p {
@@ -72,7 +74,7 @@
             </div>
             <div class="frame-content">
                 <p class="frame-content-text">
-                   This is the index.html file served by our server
+                    This is the index.html file served by our server
                 </p>
             </div>
         </div>
