--- a/ComputerNetworks/Ex03/assets/501.html
+++ b/ComputerNetworks/Ex03/assets/501.html
@@ -72,7 +72,7 @@
             </div>
             <div class="frame-content">
                 <p class="frame-content-text">
-                   We haven't even heard of this request type. Are you from HTTP 2.0?
+                   We haven't even heard of this request type. Are you from HTTP/2.0?
                 </p>
             </div>
 
