Working on html files demo

--- a/ComputerNetworks/Ex03/index.html
+++ b/ComputerNetworks/Ex03/index.html
@@ -63,6 +63,17 @@
         .frame-content p {
             margin-top: 0;
         }
+
+        .links-bar {
+            text-align: center;
+            color: #ffffff;
+        }
+
+        .links-bar a {
+            font-family: "Roboto", "Times New Roman";
+            color: #ffffff;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -76,6 +87,16 @@
                 <p class="frame-content-text">
                     This is the index.html file served by our server
                 </p>
+            </div>
+            <div class="links-bar">
+
+                <a href="public/database.html">
+                    Inspect Database
+                </a>
+                |
+                <a href="public/form.html">
+                    Form Demo
+                </a>
             </div>
         </div>
     </div>
