Done with db pull controller

--- a/ComputerNetworks/Ex03/public/database.html
+++ b/ComputerNetworks/Ex03/public/database.html
@@ -68,6 +68,10 @@
             color: rgba(255, 255, 255, 0.5);
             font-family: "Roboto", "Times New Roman";
         }
+        #result{
+            display: inline-table;
+            text-align: left;
+        }
 
     </style>
 </head>
@@ -92,6 +96,8 @@
             </div>
             <br><br>
             <div class="table-box">
+                <hr>
+                <h5>Results - showing <i id="resultCount">0</i> records</h5>
                 <div id="result">
 
                 </div>
