Working on sending data to server

--- a/ComputerNetworks/Ex03/index.html
+++ b/ComputerNetworks/Ex03/index.html
@@ -95,7 +95,7 @@
                 </a>
                 |
                 <a href="public/form.html">
-                    Form Demo
+                    Add Database Records
                 </a>
             </div>
         </div>
