--- a/ComputerNetworks/Ex03/public/database.html
+++ b/ComputerNetworks/Ex03/public/database.html
@@ -72,12 +72,18 @@
             display: inline-table;
             text-align: left;
         }
+        .href-icon{
+            width:35px;
+        }
 
     </style>
 </head>
 <body>
 <div class="container">
     <div class="content">
+        <a href="../index.html">
+            <img class="href-icon" title="home" src="img/home.png" alt="back home" >
+        </a>
         <div class="page-title">
             <h1>Database Demo</h1>
             <small>
