--- a/ComputerNetworks/Ex03/public/database.html
+++ b/ComputerNetworks/Ex03/public/database.html
@@ -68,21 +68,34 @@
             color: rgba(255, 255, 255, 0.5);
             font-family: "Roboto", "Times New Roman";
         }
-        #result{
-            display: inline-table;
+
+        #result {
+
             text-align: left;
         }
-        .href-icon{
-            width:35px;
+
+        .href-icon {
+            width: 35px;
         }
 
+        #results-frame {
+            max-height:200px;
+            width: 50%;
+            border: 1px white solid;
+            border-radius: 3px;
+            margin: 0 auto;
+            overflow-y: scroll;
+        }
+        #result li{
+            list-style: none;
+        }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="content">
         <a href="../index.html">
-            <img class="href-icon" title="home" src="img/home.png" alt="back home" >
+            <img class="href-icon" title="home" src="img/home.png" alt="back home">
         </a>
         <div class="page-title">
             <h1>Database Demo</h1>
@@ -104,18 +117,21 @@
             <div class="table-box">
                 <hr>
                 <h5>Results - showing <i id="resultCount">0</i> records</h5>
-                <div id="result">
+                <div id="results-frame">
+                    <ul id="result">
 
+                    </ul>
                 </div>
 
             </div>
 
         </div>
     </div>
-    <!--Load JQ-->
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <!--load private js file-->
-    <script src="scripts/database.js"></script>
+</div>
+<!--Load JQ-->
+<script src="scripts/jquery-1.11.3.min.js"></script>
+<script src="scripts/jquery-migrate-1.2.1.min.js"></script>
+<!--load private js file-->
+<script src="scripts/getFromDB.js"></script>
 </body>
 </html>
