Small index fix

--- a/ComputerNetworks/Ex03/index.html
+++ b/ComputerNetworks/Ex03/index.html
@@ -78,7 +78,7 @@
         }
 
         .real-content {
-            display: none;
+            display: block;
         }
 
         .disclaimer-content {
@@ -110,6 +110,10 @@
 
         button:hover {
             cursor: pointer;
+        }
+
+        .disclaimer {
+            display: none;
         }
 
         #bad:hover {
@@ -187,7 +191,7 @@
                         <br>
                         We sure hope you will take this into consideration while calculating our score. <br>
                         Enjoy our work! <br>
-                        Thank you,
+                        Thank you, <br>
                         Aviya & Aviad
                     </p>
                     <div class="disclaimer-content-links">
