--- a/ComputerNetworks/Ex03/www/index.html
+++ b/ComputerNetworks/Ex03/www/index.html
@@ -148,8 +148,15 @@
     </style>
 </head>
 <body>
+
 <div class="container">
     <div class="content">
+        <a href="https://github.com/aviadhahami/HomeWorkThirdYearFirstSemester/tree/master/ComputerNetworks/Ex03">
+            <img style="position: absolute; top: 0; right: 0; border: 0;"
+                 src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67"
+                 alt="Fork me on GitHub"
+                 data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">
+        </a>
         <div class="real-content">
             <div class="frame">
                 <div class="frame-header">
@@ -182,11 +189,14 @@
                         Hi there! <br>
                         We are hoping you're having good time checking our class' works. <br>
                         Unfortunately, we've implemented most of the client-side without reading that the
-                        index.html page should be the same as in exercise 1. <br>
-                        However, we did implement examples of GET and POST requests (i.e database insertion and
-                        pulling).
+                        index.html page should be the same as in exercise 1. Sucks.<br>
+                        But! <br>
+                        We've implemented far complicated GET and POST examples in our wep app, <br>
+                        crazy-rare things like: Database insertion, retrieving database records and more! (actually
+                        that's
+                        it...)
                         <br>
-                        Hence functionality wise - we've implemented everything needed in order demonstrate our server's
+                        So, functionality wise - we've implemented everything needed in order demonstrate our server's
                         functionality. <br>
                         <br>
                         We sure hope you will take this into consideration while calculating our score. <br>
