Added loading indicator

--- a/ComputerNetworks/Ex03/www/index.html
+++ b/ComputerNetworks/Ex03/www/index.html
@@ -176,6 +176,10 @@
                     <a href="public/form.html">
                         Add Database Records
                     </a>
+                    |
+                    <a href="public/chunked.html">
+                        Demonstrate chunky loading
+                    </a>
                 </div>
             </div>
         </div>
