--- a/ComputerNetworks/Ex04/www/public/crawlers.html
+++ b/ComputerNetworks/Ex04/www/public/crawlers.html
@@ -1,10 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+
+    <title>Crawlers</title>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <style>
+
+        body {
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            font-family: "Roboto", "Times New Roman";
+            font-weight: 300;
+        }
+
+
+        .container {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background-color: #009688;
+        }
+
+        .content {
+            margin-top: 10%;
+        }
+
+        button {
+            width: 33%;
+            height: 50px;
+            background-color: #3949AB;
+            border: 1px white solid;
+            border-radius: 5px;
+            color: white;
+        }
+
+        button:hover {
+            cursor: pointer;
+        }
+        .page-title {
+            color: white;
+            font-family: "Roboto", "Times New Roman";
+            text-align: center;
+        }
+
+        .page-title h1 {
+            font-family: "Pacifico", "Times New Roman";
+            font-weight: 400;
+        }
+
+        .page-title small {
+            font-weight: 300;
+        }
+
+    </style>
 </head>
 <body>
 
+<div class="container">
+    <div class="content">
+        <div class="page-title">
+            <h1>
+                Crawlers
+            </h1>
+        </div>
+        <div class="crawler-form">
+
+        </div>
+        <div class="crawler-data">
+
+        </div>
+
+    </div>
+</div>
+<!--Load JQ-->
+<script src="scripts/jquery-1.11.3.min.js"></script>
+<script src="scripts/jquery-migrate-1.2.1.min.js"></script>
+
+<!--load personal script-->
+<script src="scripts/index.js"></script>
 </body>
 </html>
