--- a/ComputerNetworks/Ex04/www/public/crawlers.html
+++ b/ComputerNetworks/Ex04/www/public/crawlers.html
@@ -17,7 +17,6 @@
             font-weight: 300;
         }
 
-
         .container {
             position: fixed;
             width: 100%;
@@ -79,6 +78,7 @@
 <!--Load JQ-->
 <script src="scripts/jquery-1.11.3.min.js"></script>
 <script src="scripts/jquery-migrate-1.2.1.min.js"></script>
+<script src="scripts/d3.min.js"></script>
 
 <!--load personal script-->
 <script src="scripts/index.js"></script>
