--- a/ComputerNetworks/Ex04/www/public/crawlers.html
+++ b/ComputerNetworks/Ex04/www/public/crawlers.html
@@ -54,7 +54,6 @@
         .page-title small {
             font-weight: 300;
         }
-
     </style>
 </head>
 <body>
@@ -70,7 +69,7 @@
 
         </div>
         <div class="crawler-data">
-
+            <div id="d3"></div>
         </div>
 
     </div>
@@ -81,6 +80,6 @@
 <script src="scripts/d3.min.js"></script>
 
 <!--load personal script-->
-<script src="scripts/index.js"></script>
+<script src="scripts/crawlers-d3.js"></script>
 </body>
 </html>
